--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 tokio = {version="1.37", features = [ "net", "io-util", "macros", "rt-multi-thread", "time", "sync" ]}
 byteorder = "1.5"
 tokio-test = "0.4.0"
+hex = "0.4.3"
+futures = "0.3.30"
